--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,14 @@ body {
   line-height: 1.5;
 }
 body, .app {
-  background: white;
+  background:white;
 }
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: #014eb2;
   text-align: center;
 }
 .list-books-title h1 {
@@ -38,6 +38,7 @@ body, .app {
 
 .bookshelf-title {
   border-bottom: 1px solid #dedede;
+  
 }
 .bookshelf-books {
   text-align: center;
@@ -166,6 +167,8 @@ body, .app {
 .book-cover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   background: #eee;
+  width: 128px;
+  height: 193px;
 }
 .book-cover-title {
   padding: 20px 10px 0;
